--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,4 @@
 .vscode/tasks.json
-Tree/MathExpression
-Stack/LinkedListStack
-Stack/arrayStack
-LinkedList/menuSinglyLinkedList
 *.exe
 *.json
+*.out
